fixed a lot of style issues on mobile

--- a/src/app/component/inspire-search/inspire-search.component.css
+++ b/src/app/component/inspire-search/inspire-search.component.css
@@ -59,3 +59,42 @@ text-decoration:none;
         margin-top: 31px;
     }
   }
+
+  @media only screen 
+    and (min-device-width : 375px) 
+    and (max-device-width : 667px) {
+    
+        .tile-box-primary .link-close{
+            margin-bottom: 95px;
+            margin-right:11px;
+        }
+        #field-7{
+            display:none;
+        }
+
+        .waterMark{
+            font-size: 17px;
+            margin-bottom:10px;
+        }
+    }
+    
+    
+    @media only screen 
+    and (min-device-width : 414px) 
+    and (max-device-width : 736px) {
+    
+        .tile-box-primary .link-close{
+            margin-bottom: 95px;
+            margin-right:11px;
+        }
+        #field-7{
+            display:none;
+        }
+
+        .waterMark{
+            font-size: 17px;
+            margin-bottom:10px;
+        }
+    }
+    
+    
