--- a/src/app/component/pele-yoetz/pele-yoetz.component.css
+++ b/src/app/component/pele-yoetz/pele-yoetz.component.css
@@ -3,3 +3,25 @@
         margin-top: 41px;
     }
   }
+
+    @media only screen 
+    and (min-device-width : 375px) 
+    and (max-device-width : 667px) {
+    
+        .tile-box-primary .link-close{
+            margin-bottom: 96px;
+            margin-right:7px;
+        }
+    }
+    
+    
+    @media only screen 
+    and (min-device-width : 414px) 
+    and (max-device-width : 736px) {
+    
+        .tile-box-primary .link-close{
+            margin-bottom: 96px;
+            margin-right:7px;
+        }
+    }
+    
